# yast-control-center

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  MAINTAINER  Makefile.cvs  POTFILES  README.md  RPMNAME  TODO  VERSION  configure.in.in  yast2-control-center.spec.in
.github/workflows/: ci.yml
doc/: README.developer  README.menuentries
icons/: Makefile.am
logcontrol/: Makefile.am  logcontrol.y2cc  logcontrol.ycp
package/: .cvsignore  yast2-control-center.changes  yast2-control-center.spec
remotechooser/: Makefile.am  remotechooser.y2cc  remotechooser.ycp
remoteinstall/: Makefile.am  remoteinstall.y2cc  remoteinstall.ycp
src/: .cvsignore  CMakeLists.txt  Makefile.am  QY2Settings.cpp  QY2Settings.h  YaST-systemsettings.desktop  YaST.appdata.xml  YaST.desktop  cc_neuesdesign03.ui  compiletest.sh  get_modulesdata.ycp  groupicons2ini.ycp  i18n.cpp  i18n.h  kcategorizedsortfilterproxymodel.cpp  kcategorizedsortfilterproxymodel.h  kcategorizedsortfilterproxymodel_p.h  kcategorizedview.cpp  kcategorizedview.h  kcategorizedview_p.h  kcategorydrawer.cpp  kcategorydrawer.h  kcmoduleinfo.cpp  kcmoduleinfo.h  kcmodulemodel.cpp  kcmodulemodel.h  kicongrouppage.cpp  listview.h  main.cpp  main_window.cpp  main_window.h  make_translate_conf  menuitem.cpp  menuitem.h  models_test.cpp  moduleiconitem.cpp  moduleiconitem.h  modulesview.cpp  modulesview.h  myintl.cpp  (+41 more)
src/kde/: CMakeLists.txt  kcmyast.cpp  kcmyast.desktop  kcmyast.h
